👷 Prepare for 1.1.1 release
### added

   * [Add .proto output files to kivakit-microservice GRPC service](https://github.com/Telenav/kivakit/issues/89)
   * Upgraded to (modular) Wicket 9.6
   * Build documentation

### fixed

  * [Division microservice example is broken #87](https://github.com/Telenav/kivakit/issues/87)
  * [Broken listener chain due to inheritance from mixin and base component #86](https://github.com/Telenav/kivakit/issues/86)
  * [Documentation links are broken in kivakit 1.1.0 #88](https://github.com/Telenav/kivakit/issues/88)