@@ -37,4 +37,26 @@
 
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M5</version>
+                <configuration>
+                    <excludedGroups>${exclude.test.groups}</excludedGroups>
+                    <systemPropertyVariables>
+                        <testQuick>${testQuick}</testQuick>
+                    </systemPropertyVariables>
+                    <argLine>
+                        --add-opens org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED
+                        --add-opens org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
+                        --add-opens org.apiguardian.api/org.apiguardian.api=ALL-UNNAMED
+                        -Xmx2g
+                    </argLine>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
